--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prisma:seed": "prisma db seed --preview-feature"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.11.1",
     "express": "^5.1.0"
   },
   "devDependencies": {
@@ -20,6 +22,7 @@
     "globals": "^16.3.0",
     "jest": "^30.0.4",
     "prettier": "^3.6.2",
+    "prisma": "^6.11.1",
     "supertest": "^7.1.3",
     "typescript-eslint": "^8.36.0"
   }
