--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.11.1",
-    "express": "^5.1.0"
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
