--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,13 +2,15 @@
 FROM node:18 as build
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN npm install --legacy-peer-deps
 COPY . .
 RUN npm run build
 
-FROM node:18 as production
-WORKDIR /app
-RUN npm install -g serve
-COPY --from=build /app/build ./build
+FROM nginx:alpine
+COPY --from=build /app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY cert.pem /etc/nginx/cert.pem
+COPY key.pem /etc/nginx/key.pem
+RUN rm -f /etc/nginx/conf.d/default.conf
 EXPOSE 3000
-CMD ["serve", "-s", "build", "-l", "3000"] 
+CMD ["nginx", "-g", "daemon off;"] 
