--- a/backend/package.json
+++ b/backend/package.json
@@ -31,5 +31,8 @@
     "prisma": "^6.11.1",
     "supertest": "^7.1.3",
     "typescript-eslint": "^8.36.0"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
